# Atlas-protocol-colosseum-solana

./: .env.example  .gitignore  AGENTS.md  ATLAS-TREASURY-FOR-PUSD.md  Anchor.toml  BUSINESS-TREASURY.md  CHANGELOG.md  CONFIDENTIAL-TREASURY.md  Cargo.toml  DUNE-QUERIES.md  FRONTEND.md  INFRA.md  JUPITER-EXECUTION.md  PRIVATE-EXECUTION.md  QVAC.md  README.md  clippy.toml  grant-application.md  package.json  pnpm-lock.yaml
.github/workflows/: replay-parity.yml
crates/atlas-alert/: Cargo.toml
crates/atlas-alert/src/: engine.rs  kind.rs  lib.rs  render.rs  sink.rs
crates/atlas-alt/: Cargo.toml
crates/atlas-alt/src/: compaction.rs  lib.rs  lifecycle.rs
crates/atlas-assets/: Cargo.toml
crates/atlas-assets/src/: extension.rs  lib.rs  pusd.rs  transfer_fee.rs
crates/atlas-birdeye-overlay/: Cargo.toml
crates/atlas-birdeye-overlay/src/: attribution.rs  heatmap.rs  lib.rs  opportunity.rs  quality.rs
crates/atlas-blackbox/: Cargo.toml
crates/atlas-blackbox/src/: lib.rs  record.rs  write.rs
crates/atlas-bundle/: Cargo.toml
crates/atlas-bundle/src/: idempotency.rs  lib.rs  region.rs  route.rs  tip.rs
crates/atlas-bus/: Cargo.toml
crates/atlas-bus/src/: adapters.rs  anomaly.rs  backpressure.rs  bus.rs  event.rs  lib.rs  quorum.rs  reorder.rs  replay.rs  replay_buffer.rs  source.rs  tier.rs  webhook.rs
crates/atlas-capital/: Cargo.toml
crates/atlas-capital/src/: lib.rs
crates/atlas-chaos/: Cargo.toml
crates/atlas-chaos/src/: env.rs  inject.rs  lib.rs  outcome.rs  report.rs  scenario.rs  seed.rs
crates/atlas-confidential/: Cargo.toml
crates/atlas-confidential/src/: audit_log.rs  commitment.rs  compliance.rs  disclosure.rs  lib.rs  pattern.rs  payroll.rs  public_input_v3.rs  surface.rs
crates/atlas-cpi-guard/: Cargo.toml
crates/atlas-cpi-guard/src/: allowlist.rs  lib.rs  ownership.rs  snapshot.rs
crates/atlas-execution-routes/: Cargo.toml
crates/atlas-execution-routes/src/: lib.rs  predictive.rs  registry.rs  route.rs  twap.rs
crates/atlas-exposure/: Cargo.toml
crates/atlas-exposure/src/: graph.rs  lib.rs  scenarios.rs
crates/atlas-failure/: Cargo.toml
crates/atlas-failure/src/: class.rs  lib.rs  log.rs  remediation.rs
crates/atlas-fee-oracle/: Cargo.toml
crates/atlas-fee-oracle/src/: lib.rs
crates/atlas-forensic/: Cargo.toml
crates/atlas-forensic/src/: engine.rs  heuristics.rs  lib.rs  signal.rs
crates/atlas-governance/: Cargo.toml
crates/atlas-governance/src/: lib.rs  proposal.rs  signer_set.rs
crates/atlas-intelligence/: Cargo.toml
crates/atlas-intelligence/src/: backtest.rs  cohort.rs  cross_chain.rs  exposure_graph.rs  heatmap.rs  lib.rs  multi_wallet.rs  source.rs  wallet_report.rs
crates/atlas-jupiter/: Cargo.toml
crates/atlas-jupiter/src/: hedge.rs  lend.rs  lib.rs  programs.rs
crates/atlas-lie/: Cargo.toml
crates/atlas-lie/src/: depth.rs  fragmentation.rs  lib.rs  metrics.rs  source.rs  toxicity.rs
crates/atlas-mev/: Cargo.toml
crates/atlas-mev/src/: anomaly.rs  exposure.rs  lib.rs
crates/atlas-mollusk-bench/: Cargo.toml
crates/atlas-mollusk-bench/src/: baseline.rs  lib.rs  report.rs
crates/atlas-monitor/: Cargo.toml
crates/atlas-monitor/src/: bridge.rs  lib.rs
crates/atlas-operator-agent/: Cargo.toml
crates/atlas-operator-agent/src/: agents.rs  attestation.rs  lib.rs  mandate.rs  pending.rs  registry.rs  role.rs
crates/atlas-ovl/: Cargo.toml
crates/atlas-ovl/src/: cex_guard.rs  consensus.rs  freshness.rs  keeper.rs  lib.rs  verifier.rs
crates/atlas-payments/: Cargo.toml
crates/atlas-payments/src/: auto_deposit.rs  business.rs  compliance.rs  dodo.rs  invoice.rs  kyb.rs  lib.rs  prewarm.rs  runway.rs  settlement_route.rs  warehouse_schema.rs
crates/atlas-per/: Cargo.toml
crates/atlas-per/src/: execution_privacy.rs  gateway.rs  lib.rs  public_input_v4.rs  session.rs  settlement.rs
crates/atlas-pipeline/: Cargo.toml
crates/atlas-pipeline/src/: canonical_json.rs  ctx.rs  hashing.rs  lib.rs  prover_network.rs  stage.rs
crates/atlas-pipeline/src/stages/: agents.rs  allocation.rs  consensus.rs  explanation.rs  features.rs  ingest.rs  mod.rs  planning.rs  risk.rs  serialize.rs  simulate.rs
crates/atlas-presign/: Cargo.toml
crates/atlas-presign/src/: lib.rs
crates/atlas-public-api/: Cargo.toml
crates/atlas-public-input/: Cargo.toml
crates/atlas-pyth-post/: Cargo.toml
crates/atlas-qvac/: Cargo.toml
crates/atlas-receipt-tree/: Cargo.toml
crates/atlas-recurring-plan/: Cargo.toml
crates/atlas-registry/: Cargo.toml
crates/atlas-replay/: Cargo.toml
crates/atlas-rpc-router/: Cargo.toml
crates/atlas-rs/: Cargo.toml
crates/atlas-runtime/: Cargo.toml
crates/atlas-sandbox/: Cargo.toml
crates/atlas-telemetry/: Cargo.toml
crates/atlas-treasury/: Cargo.toml
crates/atlas-trigger-gate/: Cargo.toml
crates/atlas-vault-templates/: Cargo.toml
crates/atlas-warehouse/: Cargo.toml
db/clickhouse/: V001__base_schema.sql
db/timescale/: V001__base_schema.sql
infra/fly/: fly.toml
infra/runpod/: Dockerfile
ops/grafana/: atlas-overview.json  atlas-phase04.json
ops/prometheus/: atlas-alerts.yaml
ops/runbooks/: README.md  adversarial.md  archival.md  bubblegum-keeper-loss.md  bubblegum-keeper.md  drift-abi-break.md  execution.md  helius-outage.md  inference.md  ingestion.md  mainnet-congestion.md  model-approval.md  oracle.md  proof.md  prover-outage.md  pyth-hermes-degraded.md  runtime.md  warehouse-restore.md
ops/secrets/: README.md
programs/: MIGRATION.md
programs/atlas-rebalancer/: Cargo.toml
programs/atlas-registry/: Cargo.toml
programs/atlas-vault/: Cargo.toml
programs/atlas-verifier/: Cargo.toml
prover/model/: requirements.txt  train.py
prover/orchestrator/: Cargo.toml
prover/zkvm-program/: Cargo.toml
scripts/: codama-gen.mjs
sdk/playground/: agents.html  confidential.html  freshness.html  index.html  infra.html  intel.html  intelligence.html  ledger.html  payments.html  per.html  qvac.html  (+4 more)
web/: .env.local.example  .env.production.example  eslint.config.mjs  jsx.d.ts  next.config.mjs  package.json  tsconfig.json  vercel.json
(+308 files in other folders)
