[workspace]
resolver = "2"
members = [
    "programs/atlas-verifier",
    "programs/atlas-registry",
    "programs/atlas-vault",
    "programs/atlas-rebalancer",
    "prover/zkvm-program",
    "prover/orchestrator",
    "sdk/rust",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Atlas Team"]
license = "Apache-2.0"
repository = "https://github.com/atlas-fi/atlas"

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions"] }
solana-program = "2.1.0"
spl-token-2022 = { version = "5.0", features = ["no-entrypoint"] }
spl-account-compression = { version = "0.4", features = ["cpi"] }

# zk
sp1-solana = "1.2.0"
sp1-sdk = "4.0.0"
sp1-zkvm = "4.0.0"

# off-chain
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Solana RPC
solana-client = "2.1.0"
solana-sdk = "2.1.0"

# ML
ndarray = "0.16"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
