[workspace]
resolver = "2"
# Phase 1 pipeline crates compile in this workspace.
# Anchor programs + SP1 prover live in `solana_workspace/Cargo.toml` (separate
# resolver scope) — their dependency tree (sp1-solana, spl-account-compression,
# anchor-lang) currently conflicts with sp1-sdk 4.x. Phase 2 unifies these once
# the audited sp1-solana mainnet pin is locked in.
members = [
    "crates/atlas-public-input",
    "crates/atlas-pipeline",
    "crates/atlas-telemetry",
    "crates/atlas-replay",
    "crates/atlas-bus",
    "crates/atlas-warehouse",
    "crates/atlas-lie",
    "crates/atlas-ovl",
    "crates/atlas-exposure",
    "crates/atlas-forensic",
    "crates/atlas-failure",
    "crates/atlas-blackbox",
    "crates/atlas-alert",
    "crates/atlas-capital",
    "crates/atlas-sandbox",
    "crates/atlas-registry",
    "crates/atlas-governance",
    "crates/atlas-monitor",
    "crates/atlas-runtime",
    "crates/atlas-alt",
    "crates/atlas-cpi-guard",
    "crates/atlas-bundle",
    "crates/atlas-mev",
    "crates/atlas-receipt-tree",
    "crates/atlas-pyth-post",
    "crates/atlas-mollusk-bench",
    "crates/atlas-chaos",
    "crates/atlas-fee-oracle",
    "crates/atlas-birdeye-overlay",
    "crates/atlas-execution-routes",
    "crates/atlas-presign",
    "crates/atlas-vault-templates",
    "crates/atlas-public-api",
    "crates/atlas-rs",
    "crates/atlas-assets",
    "crates/atlas-treasury",
    "crates/atlas-intelligence",
    "crates/atlas-trigger-gate",
    "crates/atlas-recurring-plan",
    "crates/atlas-jupiter",
    "crates/atlas-payments",
    "crates/atlas-confidential",
    "tests/invariants",
    "tests/adversarial",
    "tests/warehouse",
    "tests/oracles",
]
exclude = [
    "programs/atlas-verifier",
    "programs/atlas-registry",
    "programs/atlas-vault",
    "programs/atlas-rebalancer",
    "prover/zkvm-program",
    "prover/orchestrator",
    "sdk/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Atlas Team"]
license = "Apache-2.0"
repository = "https://github.com/atlas-fi/atlas"

[workspace.dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions"] }
solana-program = "2.1.0"
spl-token-2022 = { version = "5.0", features = ["no-entrypoint"] }
spl-account-compression = { version = "0.4", features = ["cpi"] }

# zk — pinned to published versions; APIs may diverge from current code stubs.
# Phase 2 pins these once we verify against the audited mainnet release.
sp1-solana = "0.1.0"
sp1-sdk = "4"
sp1-zkvm = "4"

# off-chain
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Solana RPC
solana-client = "2.1.0"
solana-sdk = "2.1.0"

# ML
ndarray = "0.16"

# observability + cli
prometheus = "0.13"
clap = { version = "4.5", features = ["derive", "env"] }

# event bus
blake3 = "1.5"
bytes = "1.7"
hmac = "0.12"
sha2 = "0.10"
axum = "0.7"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
