[package]
name = "atlas-alert"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas autonomous alert engine — Page/Notify/Digest classes with dedup, suppression, and templated narratives. Implements directive 05 §4."

[lib]

[[bin]]
name = "atlas-alertctl"
path = "src/bin/alertctl.rs"

[dependencies]
atlas-failure = { path = "../atlas-failure" }
atlas-telemetry = { path = "../atlas-telemetry" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
