[package]
name = "atlas-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas dual-route bundle keeper — Jito + SWQoS routes, bundle_id idempotency, tip oracle, region EMA. Implements directive 07 §6."

[lib]

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest = "1.5"
