[package]
name = "atlas-confidential"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas Confidential Treasury Layer — Cloak integration. Public verifiability of behavior + confidentiality of amounts. Implements directive 14."

[lib]

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
atlas-failure = { path = "../atlas-failure" }
atlas-assets = { path = "../atlas-assets" }
atlas-treasury = { path = "../atlas-treasury" }
atlas-payments = { path = "../atlas-payments" }
atlas-governance = { path = "../atlas-governance" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true
hmac.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest = "1.5"
