[package]
name = "atlas-cpi-guard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas CPI isolation — allowlist + pre/post account snapshot diff invariant. Implements directive 07 §4."

[lib]

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest = "1.5"
