[package]
name = "atlas-execution-routes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Execution route registry — Jito, SwQoS, DFlow + TWAP scheduler with proof-per-slice. Implements directive 09 §4."

[lib]

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
atlas-bundle = { path = "../atlas-bundle" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest = "1.5"
