[package]
name = "atlas-failure"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Typed failure classification + remediation policy. Implements directive 05 §2."

[lib]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest = "1.5"
