[package]
name = "atlas-fee-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QuickNode + getRecentPrioritizationFees fee oracle. Implements directive 09 §2."

[lib]

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest = "1.5"
