[package]
name = "atlas-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas governance — multisig approval flow for model registry transitions. Implements directive 06 §3.1."

[lib]

[dependencies]
atlas-registry = { path = "../atlas-registry" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest = "1.5"
