[package]
name = "atlas-intelligence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas onchain intelligence engine — Dune SIM + warehouse joins, snapshot-tagged, NEVER in commitment path. Implements directive 11."

[lib]

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
atlas-failure = { path = "../atlas-failure" }
atlas-treasury = { path = "../atlas-treasury" }
atlas-vault-templates = { path = "../atlas-vault-templates" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true
async-trait = "0.1"
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
proptest = "1.5"
