[package]
name = "atlas-mev"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas MEV detection — exposure score from adjacent same-pool transactions, MevAnomaly forensic signal. Implements directive 07 §7."

[lib]

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
atlas-forensic = { path = "../atlas-forensic" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest = "1.5"
