[package]
name = "atlas-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas drift monitor — bridges atlas-registry drift signals to atlas-alert. Implements directive 06 §2.4 + §5."

[lib]

[[bin]]
name = "atlas-monitorctl"
path = "src/bin/monitorctl.rs"

[dependencies]
atlas-registry = { path = "../atlas-registry" }
atlas-alert = { path = "../atlas-alert" }
atlas-telemetry = { path = "../atlas-telemetry" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
