[package]
name = "atlas-operator-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas Operator Agent — scoped keepers with on-chain mandates, ratcheted usage caps, and independent execution-time attestations. Implements directive 15."

[lib]

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
atlas-failure = { path = "../atlas-failure" }
atlas-governance = { path = "../atlas-governance" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest = "1.5"
