[package]
name = "atlas-ovl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Oracle Validation Layer — Pyth + Switchboard + DEX-TWAP cross-checked consensus, freshness gating, pull-oracle posting helper. Implements directive 04 §2."

[lib]

[dependencies]
atlas-bus = { path = "../atlas-bus" }
atlas-telemetry = { path = "../atlas-telemetry" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
proptest = "1.5"
